# HW-FastAPI

./: README.md  main.py  pyproject.toml
src/: schemas.py
src/database/: models.py
src/repository/: contacts.py
src/routes/: birthdays.py  contacts_crud.py  contacts_search.py
