[tool.poetry]
name = "hw-fastapi"
version = "0.1.0"
description = ""
authors = ["olgapasichnyuk <olgapasichnyuk@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.7"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
psycopg2 = "^2.9.5"
alembic = "^1.10.2"
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
pydantic = {extras = ["email"], version = "^1.10.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
